@@ -1,3 +1,9 @@
+1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ObserverSwarm.m ([ObserverSwarm -buildObjects]): Use
+	createProbeDisplay to create probe displays for modelSwarm
+	and ObserverSwarm.
+
 1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* ModelSwarm.h: Include objectbase.h instead of swarmobject.h.
